# j2c

./: Makefile.am  README.md  config.h.in  configure.ac
src/: Makefile  Makefile.am  main.c
src/compilation_unit/: Makefile.am  attributes-any.c  attributes-class-field-or-method.c  attributes-class-file.c  attributes-code.c  attributes-field-info.c  attributes-method-info.c  attributes.c  byte-code-method.c  compilation-unit-class.c  compilation-unit.c  constant-pool.c  dependency-info.c  descriptors.c  field-info.c  method-or-field-info.c  method.c  modified-utf8.c  opcodes.c  type-dependencies.c
src/compilation_unit/class_file/: Makefile.am  attributes-class-file.c  attributes-code.c  attributes-method-info.c  attributes.c  byte-code-method.c  compilation-unit-class.c  constant-pool-item.c  constant-pool.c  method-or-field-info.c  opcodes.c
src/compilation_unit/class_file/include/j2c/: attributes-any.h  attributes-class-file.h  attributes-code.h  attributes-method-info.h  byte-code-method.h  constant-pool-item.h  constant-pool.h  modified-utf8.h  opcodes.h
src/compilation_unit/include/j2c/: attributes-class-field-or-method.h  attributes-class-file.h  attributes-field-info.h  attributes-method-info.h  attributes.h  compilation-unit-class.h  constant-pool.h  field-info.h  method-or-field-info.h  opcodes.h  type-dependencies.h
src/dependencies/: Makefile.am  dependency-info.c  field-dependency.c  method-dependency.c  type-dependency.c
src/dependencies/include/j2c/: field-dependency.h  method-dependency-protected.h  method-dependency.h  type-dependency.h
src/include/j2c/: compilation-unit.h  dependency-info.h  descriptors.h  index.h  indexed-file.h  jar-file.h  jre.h  logger.h  method.h  object-array.h  options.h  readable.h  reader.h
src/indexer/: Makefile.am  class-file.c  constant-pool.c  index.c  indexed-file.c  jar-file.c  readable.c  resource-file.c  zip-input-stream.c
src/indexer/.deps/: j2c-class-file.Po
src/indexer/class-file/: Makefile.am  class-file.c  constant-pool.c
src/indexer/class-file/include/j2c/: constant-pool.h
src/indexer/include/j2c/: class-file.h  constant-pool.h  jar-file.h  resource-file.h
src/jre/: Makefile.am  jre.c
src/logger/: Makefile.am  logger.c
src/logger/.deps/: j2c-logger.Po
src/model/class_file/: classfile.c  classfile.h
src/object/: BaseObjects.c  Class.c  Class.h  ClassPriv.h  ErrorHandling.c  ErrorHandling.h  Makefile.am  Object.c  Object.h  ObjectPriv.h  ReferenceTable.c  String.c  String.h  StringPriv.h
src/options/: Makefile.am  options.c
src/reader/: Makefile.am  jar-file.c  jar-member.c  reader.c  zip-input-stream.c  zip.c
src/reader/include/j2c/: jar-file-priv.h  jar-member.h  zip-input-stream.h  zip.h
src/util/: ArrayList.c  ArrayList.h  ArrayListPriv.h  Collection.c  Collection.h  CollectionPriv.h  Iterator.c  Iterator.h  IteratorPriv.h  List.c  List.h  ListPriv.h  Makefile.am  MutableCollection.c  MutableCollection.h  MutableCollectionPriv.h  object-array.c
tests/: Makefile.am  check_j2c.c
tests/compilation_unit/: Makefile.am
tests/compilation_unit/class_file/: Makefile.am  constant-pool-test.c  constantpooldatagen.py
tests/compilation_unit/class_file/datagen/: pom.xml
tests/compilation_unit/class_file/datagen/src/main/java/com/shilling/datagen/: Datagen.java  ParseJarEntry.java  WriteJarEntry.java
tests/compilation_unit/class_file/datagen/src/main/resources/: log4j2.xml
tests/indexer/: Makefile.am  indexer-test.c
tests/jre/: Makefile.am  jre-test.c
tests/object/: CheckObject.h  CheckReferenceTable.h  Makefile.am  check_object.c  check_reference_table.c
tests/reader/: Makefile.am  jar-file-test.c  zip-input-stream-test.c  zip-test.c
tests/util/: CheckArrayList.h  CheckUtil.h  Makefile.am  check_array_list.c  check_util.c
